# dbus-lib

./: CMakeLists.txt  README.md  command.sh  install.sh  sharing_client.cpp  test.sh
example_final_service/: use_shared_lib.cpp
exmaple_final_service/: service_mp4.cpp
include/: Response.hpp  SharingService.hpp  method.hpp
src/: CMakeLists.txt  OpenFile.cpp  OpenFileUsingService.cpp  RegisterService.cpp  SharingService.cpp  example.cpp  main.cpp  method.hpp  service.cpp  sharing_client.cpp
src/example_final_service/: service_mp4.cpp
src/include/: method.hpp  service.hpp
src/tests/: sharing_client.cpp
